padding to fix text overlapping with x

--- a/src/components/ModalPayment/styles.module.scss
+++ b/src/components/ModalPayment/styles.module.scss
@@ -14,6 +14,13 @@
   }
 }
 
+@media screen and (max-width:450px){
+  .headerView{
+    padding-top:25px
+  }
+}
+
+
 .row,
 .inputRow,
 .termsAndConditions {
